--- a/projects/rock-paper-scissors/css/style.css
+++ b/projects/rock-paper-scissors/css/style.css
@@ -2,46 +2,75 @@
   font-family: "Roboto", sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+}
+::webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
 body {
   display: flex;
   flex-direction: column;
-  background-color: black;
-  color: white;
+  background: black;
+  color: oklch(97% 0.013 236.62);
+}
+
+button {
+  background-color: oklch(62.3% 0.214 259.815);
+  border: none;
+  border-radius: 20px;
+  font-size: 32px;
+  padding: 16px;
+  width: 90px;
+  flex-shrink: 0;
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+  justify-content: center;
+  border: solid white;
+  border-radius: 16px;
+  margin: 32px 20px;
+  padding: 16px;
 }
 
 .header {
   display: flex;
+  font-weight: 800;
+  font-size: 32px;
+  align-items: center;
   justify-content: center;
 }
 
 .container {
+  flex: 1;
   display: flex;
-  background-color: oklch(37.2% 0.044 257.287);
-  border-radius: 20px;
-  padding: 16px;
-  justify-content: center;
-  align-items: center;
+  gap: 16px;
   flex-direction: column;
 }
 
-#score,
-#computerScore {
-  font-weight: 700;
-  font-size: 28px;
+.scores {
+  display: flex;
+  border: solid oklch(70.4% 0.04 256.788);
+  border-radius: 16px;
+  margin: 16px;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+  font-size: 22px;
 }
 
-h1 {
-  margin-bottom: 64px;
-}
-
-button {
-  margin-top: 32px;
-  width: 128px;
-  height: 32px;
-  background-color: oklch(58.8% 0.158 241.966);
-  color: white;
-  border-radius: 24px;
-  border: none;
-  font-size: 18px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6);
+.results {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  gap: 16px;
 }
