--- a/projects/etch-a-sketch/css/style.css
+++ b/projects/etch-a-sketch/css/style.css
@@ -9,20 +9,30 @@ body {
   background-color: oklch(21% 0.034 264.665);
   color: oklch(92.8% 0.006 264.531);
   align-items: center;
-  justify-content: center;
 }
 
 .gridContainer {
+  margin-top: 16px;
   display: flex;
 }
 
 .column,
 .row {
-  display: flex;
-  flex-shrink: 0;
-  flex-direction: column-reverse;
   width: 18px;
   height: 18px;
   background-color: white;
   border: solid oklch(55.6% 0 0) 2px;
+}
+
+#resizeButton {
+  background-color: oklch(62.3% 0.214 259.815);
+  border: none;
+  border-radius: 16px;
+  font-size: 32px;
+  padding: 16px;
+  width: 125px;
+  flex-shrink: 0;
+  cursor: pointer;
+  color: oklch(92.8% 0.006 264.531);
+  margin-bottom: 16px;
 }
