--- a/projects/sign-up-form/style.css
+++ b/projects/sign-up-form/style.css
@@ -135,25 +135,26 @@ a {
 
 html,
 body {
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
 
 .container {
   display: flex;
-  height: 100%;
+  height: 100vh;
 }
 
 .image-left {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: clamp(400px, 50%, 600px);
   background: no-repeat
     url("https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .image-header-container {
@@ -164,6 +165,7 @@ body {
   width: 100%;
   color: white;
   font-size: 4em;
+  gap: 2rem;
 }
 
 .form-body {
@@ -181,10 +183,13 @@ body {
   padding: 1em;
   color: white;
   gap: 0.2em;
+  position: absolute;
+  bottom: 0;
 }
 
-.logo {
-  max-width: 20px;
+.logo img {
+  width: clamp(100px, 10vw, 200px);
+  height: auto;
 }
 
 .image-footer > a {
