--- a/projects/sign-up-form/style.css
+++ b/projects/sign-up-form/style.css
@@ -28,7 +28,6 @@ cite,
 code,
 del,
 dfn,
-em,
 img,
 ins,
 kbd,
@@ -133,6 +132,21 @@ a {
 
 /* CSS Reset End */
 
+:root {
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+}
+
 html,
 body {
   display: flex;
@@ -171,9 +185,10 @@ body {
 .form-body {
   display: flex;
   flex-direction: column;
-  gap: 1em;
   height: 100%;
   padding: 1em;
+  justify-content: center;
+  gap: 2em;
 }
 
 .image-footer {
@@ -194,4 +209,73 @@ body {
 
 .image-footer > a {
   text-decoration: underline;
+}
+
+.form-body {
+  background-color: oklch(96.9% 0.003 264.894);
+}
+
+.header {
+  display: flex;
+  font-size: 1.5em;
+  flex-direction: column;
+  gap: 1em;
+  max-width: 80%;
+  font-weight: bold;
+  margin-bottom: 2em;
+  margin-left: 2em;
+}
+
+.form {
+  background-color: white;
+  border-radius: 1em;
+  padding: 2em;
+}
+
+.form-block {
+  display: flex;
+  justify-content: space-evenly;
+}
+.form-block > p {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+  gap: 0.3em;
+  font-weight: 800;
+}
+
+.form-block > p > input {
+  padding: 0.6em;
+  border: 1px solid #e5e7eb;
+  border-radius: 1em;
+}
+
+.form-block > p > input:invalid {
+  border: 1px solid red;
+}
+
+.form-block > p > input:valid {
+  border: 1px solid green;
+}
+
+.form-block > p > input:focus {
+  box-shadow: 5px 2px 2px black;
+}
+
+.button-container {
+  width: 100%;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container > button {
+  padding: 0.8em;
+  font-weight: bold;
+  border: none;
+  margin-top: 2em;
+  border-radius: 1em;
+  background-color: #596d48;
+  color: white;
 }
