--- a/projects/sign-up-form/style.css
+++ b/projects/sign-up-form/style.css
@@ -145,7 +145,31 @@ a {
     "Open Sans",
     "Helvetica Neue",
     sans-serif;
+  --text-color: black;
+  --form-bg: oklch(96.9% 0.003 264.894);
+  --form-container-bg: white;
+  --input-bg: white;
 }
+/* @media (prefers-color-scheme: dark) { */
+/*   :root { */
+/*     font-family: */
+/*       system-ui, */
+/*       -apple-system, */
+/*       BlinkMacSystemFont, */
+/*       "Segoe UI", */
+/*       Roboto, */
+/*       Oxygen, */
+/*       Ubuntu, */
+/*       Cantarell, */
+/*       "Open Sans", */
+/*       "Helvetica Neue", */
+/*       sans-serif; */
+/*     --text-color: white; */
+/*     --form-bg: black; */
+/*     --form-container-bg: oklch(12.8% 0.042 264.755); */
+/*     --input-bg: black; */
+/*   } */
+/* } */
 
 html,
 body {
@@ -212,7 +236,7 @@ body {
 }
 
 .form-body {
-  background-color: oklch(96.9% 0.003 264.894);
+  background-color: var(--form-bg);
 }
 
 .header {
@@ -224,12 +248,14 @@ body {
   font-weight: bold;
   margin-bottom: 2em;
   margin-left: 2em;
+  color: var(--text-color);
 }
 
 .form {
-  background-color: white;
+  background-color: var(--form-container-bg);
   border-radius: 1em;
   padding: 2em;
+  color: var(--text-color);
 }
 
 .form-block {
@@ -248,6 +274,8 @@ body {
   padding: 0.6em;
   border: 1px solid #e5e7eb;
   border-radius: 1em;
+  background-color: var(--input-bg);
+  color: var(--text-color);
 }
 
 .form-block > p > input:invalid {
@@ -268,6 +296,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--form-container-bg);
 }
 
 .button-container > button {
@@ -278,4 +307,9 @@ body {
   border-radius: 1em;
   background-color: #596d48;
   color: white;
+}
+
+#login {
+  color: #596d48;
+  font-weight: bold;
 }
