--- a/projects/intermediate-html-css/03-holy-grail-mockup/style.css
+++ b/projects/intermediate-html-css/03-holy-grail-mockup/style.css
@@ -2,11 +2,15 @@
   margin: 0;
   padding: 0;
 }
+html, body {
+  height: 100vh;
+}
 
 .container {
+  height: 100%;
   display: grid;
-  gap: 4px;
   grid-template-columns: 1fr 4fr;
+  gap: 4px;
   text-align: center;
 }
 
@@ -19,24 +23,39 @@
 }
 
 .header {
-  grid-column: 1/ 3;
+  grid-column: 1 / 3;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   background-color: #393f4d;
+}
+
+.logo {
+  justify-self: start;
+}
+.menu {
+  align-self: center;
+}
+/* this took me ages to figure out */ 
+.menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
 .menu li {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
+  grid-row: 2 /4;
+  display: grid;
+  gap: 50px;
   background-color: #C50208;
 }
 
 .sidebar .photo {
+  align-content: center;
   background-color: white;
   color: black;
   font-size: 12px;
@@ -45,7 +64,8 @@
 }
 
 
-.sidebar .side-content {
+.sidebar .side-content { 
+  align-content: center;
   background-color: white;
   color: black;
   font-size: 16px;
@@ -56,14 +76,22 @@
   background-color: #C50208;
 }
 
+.nav ul {
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
 }
 
 .article {
+  grid-column: 2 / 3;
   display: grid;
-  grid-template-columns: repeat(autofit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
   background-color: #bccbde;
 }
 
@@ -78,6 +106,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -93,6 +122,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
