--- a/projects/admin-dashboard/style.css
+++ b/projects/admin-dashboard/style.css
@@ -102,3 +102,100 @@ html, body {
 /* sidebar end */
 
 /* header */
+.header {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: clamp(10em,15em, 20em);
+    padding: 1em;
+    width: 100%;
+    box-sizing: border-box;
+}
+.search {
+    display: flex;
+    align-items: center;
+    grid-column: 1 / 2;
+    gap: 0.5em;
+}
+.search svg {
+    width: 1.8em;
+    height: auto;
+}
+.search input {
+    border-radius: 3em;
+    width: 100%;
+    border-style: none;
+    background-color: oklch(87.1% 0.006 286.268);
+    padding: 0.5em;
+}
+
+.right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.dashboard {
+    display: grid;
+    background-color: oklch(87.2% 0.01 258.338);
+    padding: 1em;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+}
+.notifications {
+    width: 1em;
+    height: auto;
+    align-self: center;
+    justify-self: end;
+    grid-column: 2 / 3;
+}
+.profile {
+    display: flex;
+    grid-column: 3 / 4;
+    justify-self: center;
+    align-items: center;
+    font-size: 1.9em;
+    font-weight: 800;
+    gap: 1em;
+}
+.profile svg {
+    width: 2em;
+    height: auto;
+}
+.welcome svg {
+    width: 4em;
+    height: auto;
+}
+.welcome h1 {
+    font-size: 2em;
+    font-weight: bold;
+}
+.welcome p {
+    font-size: 0.8em;
+    font-weight: bold;
+}
+.welcome {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+.buttons {
+    grid-column: 2 / 4;
+    display: flex;
+    align-items: center;
+    gap: 2em;
+    justify-content: center;
+}
+.buttons button {
+    width: clamp(95px, 20%, 185px); 
+    font-size: 1.3em;
+    padding: 0.5em;
+    border: none;
+    border-radius: 3em;
+    font-weight: 800;
+    background-color: oklch(68.5% 0.169 237.323);
+    color: white;
+}
+.buttons button:hover {
+    filter: brightness(0.8);
+}
