--- a/projects/admin-dashboard/style.css
+++ b/projects/admin-dashboard/style.css
@@ -1,201 +1,346 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /* css reset end */
 
-html, body {
-    height: 100vh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+html,
+body {
+  height: 100vh;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 .wrapper {
-    display: flex;
-    height: 100%;
+  display: flex;
+  height: 100%;
 }
 
 /* sidebar */
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    padding: 1em;
-    gap: 3em;
-    background-color: dodgerblue;
-    color: white;
-    height: 100%;
-    width: clamp(200px, max-content, 400px);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  gap: 3em;
+  background-color: dodgerblue;
+  color: white;
+  height: 100%;
+  width: clamp(200px, max-content, 400px);
 }
 .logo svg {
-    width: 2em;
-    height: auto;
-    fill: white;
+  width: 2em;
+  height: auto;
+  fill: white;
 }
 .title {
-    display: flex;
-    gap: 0.5em;
-    font-size: 2rem;
-    font-weight: 800;
-    align-items: center;
+  display: flex;
+  gap: 0.5em;
+  font-size: 2rem;
+  font-weight: 800;
+  align-items: center;
 }
-.links, .links2 {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-    font-size: 1.3em;
-    font-weight: 700;
-}
-
-.links .link svg, .links2 .link svg {
-    width: 1.2em;
-    height: auto;
-    fill: white;
+.links,
+.links2 {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  font-size: 1.3em;
+  font-weight: 700;
 }
 
-.links .link, .links2 .link {
-    display: flex;
-    gap: 0.5em;
-    align-items: center;
+.links .link svg,
+.links2 .link svg {
+  width: 1.2em;
+  height: auto;
+  fill: white;
+}
+
+.links .link,
+.links2 .link {
+  display: flex;
+  gap: 0.5em;
+  align-items: center;
 }
 /* sidebar end */
 
 /* header */
 .header {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    height: clamp(10em,15em, 20em);
-    padding: 1em;
-    width: 100%;
-    box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: clamp(10em, 15em, 20em);
+  padding: 1em;
+  width: 100%;
+  box-sizing: border-box;
 }
 .search {
-    display: flex;
-    align-items: center;
-    grid-column: 1 / 2;
-    gap: 0.5em;
+  display: flex;
+  align-items: center;
+  grid-column: 1 / 2;
+  gap: 0.5em;
 }
 .search svg {
-    width: 1.8em;
-    height: auto;
+  width: 1.8em;
+  height: auto;
 }
 .search input {
-    border-radius: 3em;
-    width: 100%;
-    border-style: none;
-    background-color: oklch(87.1% 0.006 286.268);
-    padding: 0.5em;
+  border-radius: 3em;
+  width: 100%;
+  border-style: none;
+  background-color: oklch(87.1% 0.006 286.268);
+  padding: 0.5em;
 }
 
 .right {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-.dashboard {
-    display: grid;
-    background-color: oklch(87.2% 0.01 258.338);
-    padding: 1em;
-    box-sizing: border-box;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 .notifications {
-    width: 1em;
-    height: auto;
-    align-self: center;
-    justify-self: end;
-    grid-column: 2 / 3;
+  width: 1em;
+  height: auto;
+  align-self: center;
+  justify-self: end;
+  grid-column: 2 / 3;
 }
 .profile {
-    display: flex;
-    grid-column: 3 / 4;
-    justify-self: center;
-    align-items: center;
-    font-size: 1.9em;
-    font-weight: 800;
-    gap: 1em;
+  display: flex;
+  grid-column: 3 / 4;
+  justify-self: center;
+  align-items: center;
+  font-size: 1.9em;
+  font-weight: 800;
+  gap: 1em;
 }
 .profile svg {
-    width: 2em;
-    height: auto;
+  width: 2em;
+  height: auto;
 }
 .welcome svg {
-    width: 4em;
-    height: auto;
+  width: 4em;
+  height: auto;
 }
 .welcome h1 {
-    font-size: 2em;
-    font-weight: bold;
+  font-size: 2em;
+  font-weight: bold;
 }
 .welcome p {
-    font-size: 0.8em;
-    font-weight: bold;
+  font-size: 0.8em;
+  font-weight: bold;
 }
 .welcome {
-    display: flex;
-    align-items: center;
-    gap: 1em;
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
 .buttons {
-    grid-column: 2 / 4;
-    display: flex;
-    align-items: center;
-    gap: 2em;
-    justify-content: center;
+  grid-column: 2 / 4;
+  display: flex;
+  align-items: center;
+  gap: 2em;
+  justify-content: center;
 }
 .buttons button {
-    width: clamp(95px, 20%, 185px); 
-    font-size: 1.3em;
-    padding: 0.5em;
-    border: none;
-    border-radius: 3em;
-    font-weight: 800;
-    background-color: oklch(68.5% 0.169 237.323);
-    color: white;
+  width: clamp(95px, 20%, 185px);
+  font-size: 1.3em;
+  padding: 0.5em;
+  border: none;
+  border-radius: 3em;
+  font-weight: 800;
+  background-color: oklch(68.5% 0.169 237.323);
+  color: white;
 }
 .buttons button:hover {
-    filter: brightness(0.8);
+  opacity: 0.8;
+}
+/* header end */
+/* dashboard */
+.dashboard {
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: min-content;
+  padding: 1em;
+  height: 100%;
+  background-color: oklch(87.2% 0.01 258.338);
+}
+.dashboard > p {
+  font-size: 2em;
+  margin: 1em 0px;
+  font-weight: bold;
+  width: max-content;
+}
+.card {
+  display: flex;
+  position: relative;
+  background-color: white;
+  padding: 2em;
+  border-radius: 1em;
+}
+.projects {
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1em;
+}
+.card .text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.card .text h1 {
+  font-size: 1.4em;
+  font-weight: 800;
+}
+/* i mustve been really tired when i added this */
+.card .highlight {
+  background-color: oklch(79.5% 0.184 86.047);
+  width: clamp(10px, 1%, 20px);
+  height: 100%;
+  align-self: stretch;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top-left-radius: 2em;
+  border-bottom-left-radius: 2em;
+}
+#announcements {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  justify-self: center;
 }
