--- a/projects/admin-dashboard/style.css
+++ b/projects/admin-dashboard/style.css
@@ -344,3 +344,64 @@ body {
   grid-column: 2/3;
   justify-self: center;
 }
+
+.announcements {
+  background-color: white;
+  border-radius: 1em;
+  margin-left: 1em;
+  padding: 2em;
+  height: min-content;
+}
+.seperator {
+  margin: 1em 0px;
+  width: 100%;
+  height: 2px;
+  background-color: lightgray;
+}
+.announcement-card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.announcement-card > h1 {
+  font-size: 1.4em;
+  font-weight: 800;
+}
+.dashboard-right-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+#trending {
+  font-size: 2em;
+  font-weight: bold;
+  width: max-content;
+  align-self: center;
+  margin-top: 1em;
+}
+.trending {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  background-color: white;
+  border-radius: 1em;
+  margin-left: 1em;
+  margin-top: 1em;  
+  padding: 2em;
+  height: min-content;
+}
+.trending-card svg {
+  width: 2.5em;
+  height: auto;
+}
+.trending-card {
+  display: flex;
+  gap: 1em;
+}
+.trending-text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2em;
+}
+.trending-text .desc {
+  color: oklch(70.7% 0.022 261.325);
+}
