--- a/projects/javascript/tic-tac-toe/style.css
+++ b/projects/javascript/tic-tac-toe/style.css
@@ -1,68 +1,95 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
+  margin: 0;
+  padding: 0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
-html, body {
-	height: 100vh;
-	background-color: black;
-	color: white;
+html,
+body {
+  height: 100vh;
+  background-color: black;
+  color: white;
 }
 
 .container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	gap: 5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  gap: 5em;
 }
 
 h1 {
-	font-size: 2.5rem;
-	font-weight: 100;
+  font-size: 2.5rem;
+  font-weight: 100;
 }
 
 .choice-container p {
-	font-size: 1.6rem;
-	font-size: bold;
+  font-size: 1.6rem;
+  font-size: bold;
 }
 .choice-container {
-	display: flex;
-	flex-direction: column;
-	gap: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .choice {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-#marker-x, #marker-o {
-	color: white;
-	border: none;
-	border-radius: 1em;
-	padding: 0.6em;
-	font-size: 1.4em;
-	font-weight: bold;
+#marker-x,
+#marker-o {
+  color: white;
+  border: none;
+  border-radius: 1em;
+  padding: 0.6em;
+  font-size: 1.4em;
+  font-weight: bold;
 }
 #marker-x {
-	background-color: oklch(42.4% 0.199 265.638);
+  background-color: rgb(25, 60, 184);
 }
 #marker-o {
-	background-color: oklch(64.5% 0.246 16.439);
+  background-color: rgb(255, 32, 86);
+}
+#restart {
+  color: white;
+  border: none;
+  border-radius: 1em;
+  padding: 0.4em;
+  font-size: 1.4em;
+  font-weight: bold;
+  background-color: rgb(25, 60, 184);
 }
 
 .cell {
-	background-color: white;
-	width: 1fr;
-	height: 1fr;
-	border: 2px solid black;
-	color: black;
-	font-size: 4em;
-	font-weight: bold;
-	display :flex;
-	align-items: center;
-	justify-content: center;
+  background-color: white;
+  width: 1fr;
+  height: 1fr;
+  border: 2px solid black;
+  color: black;
+  font-size: 4em;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#winner {
+  font-size: 1.5em;
+  font-weight: bold;
 }
