--- a/projects/javascript/restaurant-page/src/styles.css
+++ b/projects/javascript/restaurant-page/src/styles.css
@@ -48,7 +48,7 @@ header button:hover {
     padding: 1em;
     box-sizing: border-box;
 }
-#restaurant-hero, #reservation-hours, #location  {
+#restaurant-hero, #reservation-hours, #location, #beverage-section, #main-section   {
     background-color: oklch(27.9% 0.041 260.031);
     padding: 2em;
     border: none;
@@ -61,4 +61,28 @@ header button:hover {
 #restaurant-name, #reservation-hours-title, #location-title {
     font-weight:800;
     font-size: 2em;
+}
+
+#reservation-hours-description, #location-location {
+    font-weight: 200;
+}
+
+#title-menu {
+    font-size: 2.5em;
+    font-weight: bold;
+}
+
+#beverage1 > p, #beverage2 > p, #main1 > p, #main2 > p, #main3 > p, #main4 > p {
+    font-size: 2em;
+    font-weight: 700;
+}
+#beverage1, #beverage2, #main1, #main2, #main3, #main4 {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    font-weight: 100;
+}
+#beverage-title, #main-title {
+    font-size: 2.4em;
+    font-weight: 800;
 }
