--- a/projects/intermediate-html-css/03-holy-grail-mockup/style.css
+++ b/projects/intermediate-html-css/03-holy-grail-mockup/style.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
 }
-html, body {
+html,
+body {
   height: 100vh;
 }
 
@@ -35,7 +36,7 @@ html, body {
 .menu {
   align-self: center;
 }
-/* this took me ages to figure out */ 
+/* this took me ages to figure out */
 .menu ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -51,7 +52,7 @@ html, body {
   grid-row: 2 /4;
   display: grid;
   gap: 50px;
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
 .sidebar .photo {
@@ -63,8 +64,7 @@ html, body {
   border-radius: 10px;
 }
 
-
-.sidebar .side-content { 
+.sidebar .side-content {
   align-content: center;
   background-color: white;
   color: black;
@@ -73,11 +73,11 @@ html, body {
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
 .nav ul {
-  display:grid;
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -103,7 +103,7 @@ html, body {
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
   height: 200px;
