--- a/projects/javascript/weather-api/src/style.css
+++ b/projects/javascript/weather-api/src/style.css
@@ -76,3 +76,23 @@ body {
 .furnace {
   color: oklch(50.5% 0.213 27.518);
 }
+input[type="text"] {
+  border-radius: 1em;
+  padding: 0.5em;
+  background-color: oklch(27.9% 0.041 260.031);
+  color: white;
+  border: none;
+}
+button {
+  font-size: 1.4em;
+  padding: 0.5em;
+  margin-bottom: 1em;
+  border-radius: 1em;
+  background-color: oklch(54.6% 0.245 262.881);
+  color: white;
+  border: none;
+  font-weight: bold;
+}
+button:hover {
+  background-color: oklch(42.4% 0.199 265.638);
+}
