--- a/projects/javascript/weather-api/src/style.css
+++ b/projects/javascript/weather-api/src/style.css
@@ -6,7 +6,7 @@ body {
   padding: 0px;
   background-color: black;
   color: white;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
